--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.3.4",
     "@fullcalendar/daygrid": "^4.1.0",
     "@fullcalendar/interaction": "^4.1.0",
     "@fullcalendar/react": "^4.1.0",
     "@fullcalendar/timegrid": "^4.1.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "fhir.js": "0.0.20",
     "history": "^4.9.0",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
