--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fullcalendar/timegrid": "^4.1.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "fhir.js": "0.0.20",
     "history": "^4.9.0",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
