--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-spinkit": "^3.0.0",
-    "webpack": "4.29.6"
+    "webpack": "^4.29.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,10 +46,11 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^1.9.0",
     "css-loader": "^2.1.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "webpack": "4.29.6"
+    "webpack": "^4.29.6"
   }
 }
